# ChangeLog for perl-core/ExtUtils-ParseXS
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-ParseXS/ChangeLog,v 1.5 2009/09/15 07:27:56 tove Exp $

*ExtUtils-ParseXS-2.20.0401 (15 Sep 2009)

  15 Sep 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-ParseXS-2.20.0401.ebuild:
  Version bump

*ExtUtils-ParseXS-2.20-r1 (25 Jul 2009)

  25 Jul 2009; Mark Loeser <halcy0n@gentoo.org>
  -ExtUtils-ParseXS-2.20.ebuild, +ExtUtils-ParseXS-2.20-r1.ebuild,
  +files/eu-pxs-newXS-const-file.patch:
  Revbump to fix header for gcc-4.4 issue; bug #278155

*ExtUtils-ParseXS-2.20 (03 Jul 2009)

  03 Jul 2009; Torsten Veller <tove@gentoo.org>
  +ExtUtils-ParseXS-2.20.ebuild:
  Version bump

  11 Jan 2009; Torsten Veller <tove@gentoo.org>
  ExtUtils-ParseXS-2.18.ebuild, ExtUtils-ParseXS-2.19.ebuild:
  Remove Module-Build from RDEPEND (#246942)

*ExtUtils-ParseXS-2.19 (01 Nov 2008)
*ExtUtils-ParseXS-2.18 (01 Nov 2008)

  01 Nov 2008; Torsten Veller <tove@gentoo.org> +metadata.xml,
  +ExtUtils-ParseXS-2.18.ebuild, +ExtUtils-ParseXS-2.19.ebuild:
  dev-perl => perl-core migration

  01 Nov 2008; Torsten Veller <tove@gentoo.org>
  extutils-parsexs-2.18.ebuild, extutils-parsexs-2.19.ebuild:
  New virtuals: ExtUtils-CBuilder module-build

  15 Sep 2008; Torsten Veller <tove@gentoo.org>
  -extutils-parsexs-2.15.ebuild, -extutils-parsexs-2.16.ebuild,
  -extutils-parsexs-2.17.ebuild:
  Cleanup

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  extutils-parsexs-2.19.ebuild:
  alpha/ia64/sparc/x86 stable

*extutils-parsexs-2.19 (30 Apr 2008)

  30 Apr 2008; Torsten Veller <tove@gentoo.org>
  +extutils-parsexs-2.19.ebuild:
  Version bump

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> extutils-parsexs-2.18.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> extutils-parsexs-2.18.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  07 Jul 2007; Tom Gall <tgall@gentoo.org>
  extutils-parsexs-2.18.ebuild: