@@ -2,8 +2,10 @@ AUX eu-pxs-newXS-const-file.patch 674 RMD160 97783a3c98500fce82f93ad223f8e03ef6b
 DIST ExtUtils-ParseXS-2.19.tar.gz 25214 RMD160 131823e74af109cefc747280d916c07b5f3a49b4 SHA1 1dddbe434be59eab7245df6177f2de1d9423cbd6 SHA256 46b52a99f620a200b4617ee580651d02d47a115c3be19e95c467792bf13c29c7
 DIST ExtUtils-ParseXS-2.20.tar.gz 31847 RMD160 ff8abe9591d7627013b0ee310a3c8d122080f9d3 SHA1 d2d566e75afac6017e06303b6844686cf0f3ba80 SHA256 d367c9a600922cf0c8b03d79fd77dae8d019158b7a8e666612c3bc682308a3da
 DIST ExtUtils-ParseXS-2.200401.tar.gz 35256 RMD160 6e94f452502d6a97abdfed81530a240ac9a22627 SHA1 bdcdfce2c10b3fe246d9a51f00bd6544288a6414 SHA256 1c89eaeeaa2d34b56e2732fc9d23bbc89c0bd5f0132ca0919399dfbdfcfb7634
+DIST ExtUtils-ParseXS-2.21.tar.gz 39225 RMD160 93c768e89a6c54cb4d10bbaefeede7157cea7f9f SHA1 72de839f3e84e884e727a40fd710f1e2328db879 SHA256 a479e662bf78c2ab15860222edd46a567d14ecbacb67788a22f1163fa91c4665
 EBUILD ExtUtils-ParseXS-2.19.ebuild 662 RMD160 f9ca1006809a09f636f61093bf6e7b059ff72534 SHA1 0c1f1e8dcbcd6833a738a2c7d12d2921eb698eaf SHA256 4daf17dc5239434754bcbee4ed19626e54305e7363d0ff694cbaadb6d6f0c1cf
 EBUILD ExtUtils-ParseXS-2.20-r1.ebuild 690 RMD160 f53b7029fd32080945cc1934fba927aa4b79f641 SHA1 3b959d1214f68ac324e5ae1287850311acb155ff SHA256 e02206656ad499989b88d2b55182a7e86855d7e6cae1e4203693dfc00ea36beb
 EBUILD ExtUtils-ParseXS-2.20.0401.ebuild 712 RMD160 497db38c097b186fae2c3a6b8f48ad9d52d1f5c4 SHA1 bac16304f3c5c11188868b66b42a171d520f594d SHA256 49648ce74be92aba97d79f01d022aaf0da8a09c31c5c22bb0729d67a97bfd907
-MISC ChangeLog 7432 RMD160 6581b38c791e16293fef28ceb4b1e506b1ec4d23 SHA1 48e09ec263d1058f25e266a95fff079e83af1ad1 SHA256 55fa7c481a6ba4c16aab33cd4e902546bbb5da91a18ac242d3d749a577d8fc5d
+EBUILD ExtUtils-ParseXS-2.21.ebuild 710 RMD160 e8956e74a67755f0e1ccd7aaf761051c4acc54a8 SHA1 1b2fd0538486eea7c18111a4693024274e42d531 SHA256 487f27311aee1180eac850c18323c84141fbfd9b87c35a944cae8bc76283f379
+MISC ChangeLog 7567 RMD160 01cb9da21f49415482d589795ca3260ca1526e39 SHA1 c8e48c6f501eb6c07e646cde97bdb7849b3f5546 SHA256 2a065419785ab2e10455febf9d7e0cd358a19ead8d1a54fd890caba8160995ba
 MISC metadata.xml 158 RMD160 03e4d8164c58bc61660cbaf489d4e3652de0feb7 SHA1 9a84117c6fb70288426e20c84deaf16f4381a549 SHA256 1fef4c0af5f71b777110f54d9dfbd27d6c85c750fca007f4a2fb38345ebbb710
