@@ -1,6 +1,12 @@
 # ChangeLog for perl-core/ExtUtils-ParseXS
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-ParseXS/ChangeLog,v 1.5 2009/09/15 07:27:56 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/perl-core/ExtUtils-ParseXS/ChangeLog,v 1.6 2009/10/06 18:46:58 tove Exp $
+
+*ExtUtils-ParseXS-2.21 (06 Oct 2009)
+
+  06 Oct 2009; Torsten Veller <tove@gentoo.org>
+  +ExtUtils-ParseXS-2.21.ebuild:
+  Version bump
 
 *ExtUtils-ParseXS-2.20.0401 (15 Sep 2009)
 
